clusters/talos-robbinsdale/apps/homarr/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homarr
  namespace: homarr
  annotations:
    item.homer.rajsingh.info/name: "Homarr"
    item.homer.rajsingh.info/subtitle: "Dashboard Alternative"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/homarr.svg"
    item.homer.rajsingh.info/tag: "utilities"
    item.homer.rajsingh.info/keywords: "dashboard, home, apps"

    service.homer.rajsingh.info/name: "Utilities"
    service.homer.rajsingh.info/icon: "fas fa-tools"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "homarr.rajsingh.info"
    - "homarr.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: homarr
          port: 7575
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
